# gui-projects

./: README.md
investment_tracker/: README.md  main.py  portfolio.db  pyproject.toml  ui_tracker_window.py
investment_tracker/controllers/: tracker_controller.py
investment_tracker/models/: portfolio.py  stock_data.py
investment_tracker/ui/: tracker_window.ui
order_manager/: README.md  main.py  orders.db  pyproject.toml
order_manager/controllers/: order_controller.py
order_manager/models/: database.py  invoice_generator.py
order_manager/ui/: order_window.ui
password_manager/: README.md  main.py  passwords.db  pyproject.toml  secret.key
password_manager/controllers/: generator.py  manager.py  password_checker.py
password_manager/models/: database.py  encryption.py
password_manager/ui/: main_window.py  main_window.ui
personal_finance_tracker/: README.md  app.py  finance_tracker.db  monthly_report.xlsx  pyproject.toml
personal_finance_tracker/db/: database.py
personal_finance_tracker/reports/: report_generator.py
personal_finance_tracker/ui/: main_window.py  main_window.ui
price_monitor/: README.md  main.py  pyproject.toml  ui_monitor_window.py
price_monitor/controllers/: monitor_controller.py
price_monitor/models/: stock_data.py
price_monitor/ui/: monitor_window.py  monitor_window.ui
